src/components/elements/Thumbs/moviethumb.module.css
.wrapper {
  display: block;
  position: relative;
  padding-bottom: 150%;
  text-decoration: none;
  overflow: hidden;
}

.image {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: all 0.3s;
  box-sizing: border-box;
}

.title {
  position: absolute;
  top: 0;
  transform: translate(0, -100%);
  transition: all 0.15s ease-out;
  width: 100%;
  margin: 0;
  padding: 5px 10px;
  font-size: 1.2rem;
  color: #fff;
  background-color: #000d;
  box-sizing: border-box;
}

.wrapper:hover .title {
  transform: translate(0);
}

@media screen and (max-width: 550px) {
  .title {
    font-size: 1rem;
  }
}

.character {
  display: block;
  margin-top: 0.4em;
  font-size: 0.8em;
  color: #d3d3d3;
}

